--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -139,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\Basic.shader" />
+    <None Include="assets\shaders\Circle.shader" />
     <None Include="assets\shaders\Compute.shader" />
     <None Include="assets\shaders\ComputeOptimized.shader" />
     <None Include="assets\shaders\Explosion.shader" />
@@ -148,6 +149,7 @@
     <None Include="assets\shaders\GeometryDemo.shader" />
     <None Include="assets\shaders\Model.shader" />
     <None Include="assets\shaders\Point.shader" />
+    <None Include="assets\shaders\Rectangle.shader" />
     <None Include="assets\shaders\Simple.shader" />
     <None Include="assets\shaders\Sprite.shader" />
     <None Include="src\vendor\glm\detail\func_common.inl" />
