--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="src\domains\breakout\components\Brick.cpp" />
     <ClCompile Include="src\domains\breakout\GameLevel.cpp" />
     <ClCompile Include="src\domains\breakout\GameObject.cpp" />
+    <ClCompile Include="src\domains\breakout\ParticleEmitter.cpp" />
     <ClCompile Include="src\domains\breakout\Physics.cpp" />
     <ClCompile Include="src\SpriteRenderer.cpp" />
     <ClCompile Include="src\ResourceManager.cpp" />
@@ -297,6 +298,8 @@
     <ClInclude Include="src\domains\breakout\components\Brick.h" />
     <ClInclude Include="src\domains\breakout\GameLevel.h" />
     <ClInclude Include="src\domains\breakout\GameObject.h" />
+    <ClInclude Include="src\domains\breakout\Particle.h" />
+    <ClInclude Include="src\domains\breakout\ParticleEmitter.h" />
     <ClInclude Include="src\domains\breakout\Physics.h" />
     <ClInclude Include="src\SpriteRenderer.h" />
     <ClInclude Include="src\ResourceManager.h" />
