--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -94,6 +94,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\domains\breakout\Particle.cpp" />
     <ClCompile Include="src\domains\breakout\CollisionShape.cpp" />
     <ClCompile Include="src\domains\breakout\CollisionShapeCircle.cpp" />
     <ClCompile Include="src\domains\breakout\CollisionShapeRectangle.cpp" />
