feat(post processing): move framebuffer/postprocessing logic into own class

--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="src\domains\breakout\ParticleEmitter.cpp" />
     <ClCompile Include="src\domains\breakout\Physics.cpp" />
     <ClCompile Include="src\FrameBuffer.cpp" />
+    <ClCompile Include="src\PostProcessing.cpp" />
     <ClCompile Include="src\RenderBuffer.cpp" />
     <ClCompile Include="src\scenes\SceneFrameBuffer.cpp" />
     <ClCompile Include="src\SpriteRenderer.cpp" />
@@ -306,6 +307,7 @@
     <ClInclude Include="src\domains\breakout\ParticleEmitter.h" />
     <ClInclude Include="src\domains\breakout\Physics.h" />
     <ClInclude Include="src\FrameBuffer.h" />
+    <ClInclude Include="src\PostProcessing.h" />
     <ClInclude Include="src\RenderBuffer.h" />
     <ClInclude Include="src\scenes\SceneFrameBuffer.h" />
     <ClInclude Include="src\SpriteRenderer.h" />
